Fix: good practices